--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -138,17 +138,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings Page!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFj-pe-qEV">
-                                <rect key="frame" x="245" y="105" width="111" height="21"/>
+                                <rect key="frame" x="245" y="28" width="111" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fiM-CP-ULN">
+                                <rect key="frame" x="232" y="154" width="138" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="138" id="Ic2-S7-YLD"/>
+                                    <constraint firstAttribute="height" constant="21" id="UXa-Qd-hxv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="type current password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fJH-cU-pab">
+                                <rect key="frame" x="217" y="183" width="166" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="type new password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AbY-Db-Mx1">
+                                <rect key="frame" x="227" y="244" width="146" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="retype new password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pbt-m8-BoP">
+                                <rect key="frame" x="221" y="282" width="159" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="na6-R0-BJZ">
+                                <rect key="frame" x="225" y="320" width="151" height="30"/>
+                                <state key="normal" title="Submit new password"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="na6-R0-BJZ" firstAttribute="top" secondItem="pbt-m8-BoP" secondAttribute="bottom" constant="8" symbolic="YES" id="0k5-2Y-7FU"/>
                             <constraint firstItem="sFj-pe-qEV" firstAttribute="centerX" secondItem="DB3-V2-Hb9" secondAttribute="centerX" id="Epg-g0-msM"/>
-                            <constraint firstItem="sFj-pe-qEV" firstAttribute="top" secondItem="Twi-bo-rW8" secondAttribute="bottom" constant="85" id="glY-Xr-qKs"/>
-                            <constraint firstItem="yoN-Sb-YbX" firstAttribute="top" secondItem="sFj-pe-qEV" secondAttribute="bottom" constant="474" id="tEu-oU-1ME"/>
+                            <constraint firstItem="AbY-Db-Mx1" firstAttribute="top" secondItem="fJH-cU-pab" secondAttribute="bottom" constant="31" id="Ig3-mL-cOs"/>
+                            <constraint firstItem="na6-R0-BJZ" firstAttribute="centerX" secondItem="DB3-V2-Hb9" secondAttribute="centerX" id="N69-zr-Rrj"/>
+                            <constraint firstItem="fJH-cU-pab" firstAttribute="top" secondItem="fiM-CP-ULN" secondAttribute="bottom" constant="8" symbolic="YES" id="SvV-04-AMp"/>
+                            <constraint firstItem="fJH-cU-pab" firstAttribute="centerX" secondItem="DB3-V2-Hb9" secondAttribute="centerX" id="X54-Xh-QjC"/>
+                            <constraint firstItem="yoN-Sb-YbX" firstAttribute="top" secondItem="na6-R0-BJZ" secondAttribute="bottom" constant="250" id="bh0-My-veK"/>
+                            <constraint firstItem="sFj-pe-qEV" firstAttribute="top" secondItem="Twi-bo-rW8" secondAttribute="bottom" constant="8" id="glY-Xr-qKs"/>
+                            <constraint firstItem="AbY-Db-Mx1" firstAttribute="centerX" secondItem="DB3-V2-Hb9" secondAttribute="centerX" id="o5Y-74-uhG"/>
+                            <constraint firstItem="pbt-m8-BoP" firstAttribute="top" secondItem="AbY-Db-Mx1" secondAttribute="bottom" constant="8" symbolic="YES" id="r6Y-XB-yik"/>
+                            <constraint firstItem="yoN-Sb-YbX" firstAttribute="top" secondItem="sFj-pe-qEV" secondAttribute="bottom" constant="551" id="tEu-oU-1ME"/>
+                            <constraint firstItem="fiM-CP-ULN" firstAttribute="centerX" secondItem="DB3-V2-Hb9" secondAttribute="centerX" constant="1" id="vEZ-AX-MFj"/>
+                            <constraint firstItem="pbt-m8-BoP" firstAttribute="centerX" secondItem="DB3-V2-Hb9" secondAttribute="centerX" id="zTN-dg-Ubc"/>
                         </constraints>
                     </view>
                     <connections>
@@ -381,7 +420,7 @@
                                 <rect key="frame" x="0.0" y="86" width="600" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VSI-oZ-nxd" id="emG-AP-STX">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndg-wR-OIq">
