--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -121,17 +121,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Create new List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xvt-Yj-Vd3">
-                                <rect key="frame" x="202" y="116" width="119" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RBP-Ei-YaJ">
+                                <rect key="frame" x="30" y="60" width="540" height="130.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create a new list" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xvt-Yj-Vd3">
+                                        <rect key="frame" x="187" y="0.0" width="166.5" height="30.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="22"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name your list here" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="5UC-tr-brp">
+                                        <rect key="frame" x="54" y="50.5" width="432" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Q4n-K8-BWN">
+                                        <rect key="frame" x="54" y="100.5" width="432" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3bp-c4-Cdg">
+                                                <rect key="frame" x="0.0" y="0.0" width="206" height="30"/>
+                                                <state key="normal" title="Create List"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pXn-1J-Cqf">
+                                                <rect key="frame" x="226" y="0.0" width="206" height="30"/>
+                                                <state key="normal" title="Cancel"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Q4n-K8-BWN" firstAttribute="width" secondItem="RBP-Ei-YaJ" secondAttribute="width" multiplier="0.8" id="3L9-hT-jfr"/>
+                                    <constraint firstItem="5UC-tr-brp" firstAttribute="width" secondItem="RBP-Ei-YaJ" secondAttribute="width" multiplier="0.8" id="QJR-dD-nMR"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Xvt-Yj-Vd3" firstAttribute="centerX" secondItem="ycB-H2-I7A" secondAttribute="centerX" id="Uop-2f-5pa"/>
-                            <constraint firstItem="Xvt-Yj-Vd3" firstAttribute="centerY" secondItem="ycB-H2-I7A" secondAttribute="centerY" id="o3T-qt-TLU"/>
+                            <constraint firstItem="RBP-Ei-YaJ" firstAttribute="top" secondItem="5fZ-w3-xfg" secondAttribute="bottom" constant="60" id="4cP-m5-rC2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RBP-Ei-YaJ" secondAttribute="trailing" constant="10" id="6ZF-MG-YjL"/>
+                            <constraint firstItem="RBP-Ei-YaJ" firstAttribute="leading" secondItem="ycB-H2-I7A" secondAttribute="leadingMargin" constant="10" id="ht6-8r-UBg"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -1299,7 +1327,7 @@
                                     <constraint firstAttribute="width" constant="204" id="rx6-tN-BhT"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IrF-xD-Jyr">
@@ -1319,7 +1347,7 @@
                                     <constraint firstAttribute="width" constant="272" id="NMA-aP-rdM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
