--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1433,10 +1433,10 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What ingredient would you like to add?" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IrF-xD-Jyr">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What ingredient would you like to add?" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IrF-xD-Jyr">
                                 <rect key="frame" x="61" y="139" width="480" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="EcT-Nc-jLx"/>
+                                    <constraint firstAttribute="height" constant="36" id="Oay-0S-4m5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -1444,35 +1444,46 @@
                                     <action selector="nameWasEntered:" destination="ek9-3g-hq6" eventType="editingDidEndOnExit" id="qEc-xQ-Cbf"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You will need to propose at least one flavor match to complete the process of adding an ingredient." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRK-me-oUD">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You will need to propose at least one flavor match to complete the process of adding an ingredient." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRK-me-oUD">
                                 <rect key="frame" x="150" y="183" width="300" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="800" id="M7P-CR-9uf"/>
-                                    <constraint firstAttribute="width" constant="300" id="cTJ-W4-BkS"/>
+                                    <constraint firstAttribute="width" constant="300" id="MGT-Kz-K34"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sO6-2A-miD">
-                                <rect key="frame" x="61" y="183" width="480" height="193"/>
+                                <rect key="frame" x="20" y="183" width="560" height="193"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="setFilterCell" id="9zx-Uu-5lU">
-                                        <rect key="frame" x="0.0" y="28" width="480" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="setFilterCell" id="9zx-Uu-5lU" customClass="SetFilterTableViewCell" customModule="FlavorFinder">
+                                        <rect key="frame" x="0.0" y="28" width="560" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9zx-Uu-5lU" id="r8M-26-kiP">
-                                            <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="DnB-kZ-wh9">
+                                                    <rect key="frame" x="503" y="6" width="51" height="31"/>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="DnB-kZ-wh9" firstAttribute="trailing" secondItem="r8M-26-kiP" secondAttribute="trailingMargin" id="Odp-vt-J53"/>
+                                                <constraint firstItem="DnB-kZ-wh9" firstAttribute="centerY" secondItem="r8M-26-kiP" secondAttribute="centerY" id="WPx-vM-DZM"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="filterSwitch" destination="DnB-kZ-wh9" id="Pnu-5R-VX7"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Pf-9F-wjA">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Pf-9F-wjA">
                                 <rect key="frame" x="175" y="407" width="250" height="45"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="ih5-NV-WUA"/>
-                                    <constraint firstAttribute="width" constant="250" id="xMu-rp-tvz"/>
+                                    <constraint firstAttribute="width" constant="250" id="Ld8-co-Ma7"/>
+                                    <constraint firstAttribute="height" constant="45" id="plf-yw-4ZZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
                                 <state key="normal" title="Next"/>
@@ -1491,26 +1502,26 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fyj-CA-fkS" firstAttribute="width" secondItem="CvN-rc-Ooi" secondAttribute="width" multiplier="0.8" id="0Dl-47-Mp2"/>
-                            <constraint firstItem="pRK-me-oUD" firstAttribute="top" secondItem="IrF-xD-Jyr" secondAttribute="bottom" constant="8" symbolic="YES" id="1XD-2w-ggn"/>
-                            <constraint firstItem="sO6-2A-miD" firstAttribute="trailing" secondItem="IrF-xD-Jyr" secondAttribute="trailing" id="3uA-hL-s72"/>
-                            <constraint firstItem="sO6-2A-miD" firstAttribute="top" secondItem="pRK-me-oUD" secondAttribute="top" id="9I9-1G-nYq"/>
-                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="centerX" secondItem="CvN-rc-Ooi" secondAttribute="centerX" id="AKP-z5-sCd"/>
-                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="top" secondItem="fyj-CA-fkS" secondAttribute="bottom" constant="8" symbolic="YES" id="DgW-qd-wgH"/>
-                            <constraint firstItem="pRK-me-oUD" firstAttribute="centerX" secondItem="IrF-xD-Jyr" secondAttribute="centerX" id="GkY-Jv-46b"/>
-                            <constraint firstItem="kCX-e3-61j" firstAttribute="centerX" secondItem="pRK-me-oUD" secondAttribute="centerX" id="HMH-f2-ax6"/>
-                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="centerX" secondItem="CvN-rc-Ooi" secondAttribute="centerX" id="NHN-dW-CCe"/>
-                            <constraint firstItem="by8-ey-Bha" firstAttribute="top" secondItem="kCX-e3-61j" secondAttribute="bottom" constant="99" id="Oy1-vc-cJ1"/>
-                            <constraint firstItem="kCX-e3-61j" firstAttribute="leading" secondItem="5Pf-9F-wjA" secondAttribute="leading" id="VN7-Vq-CzC"/>
-                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="trailing" secondItem="kCX-e3-61j" secondAttribute="trailing" id="XpW-w8-H2Q"/>
-                            <constraint firstItem="fyj-CA-fkS" firstAttribute="centerX" secondItem="IrF-xD-Jyr" secondAttribute="centerX" id="b9n-Lu-mrp"/>
-                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="leading" secondItem="sO6-2A-miD" secondAttribute="leading" id="bPZ-Vo-hVk"/>
-                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="top" secondItem="kCX-e3-61j" secondAttribute="top" id="dyV-xa-6D7"/>
-                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="width" secondItem="CvN-rc-Ooi" secondAttribute="width" multiplier="0.8" id="lJn-4P-Sqb"/>
-                            <constraint firstItem="kCX-e3-61j" firstAttribute="baseline" secondItem="5Pf-9F-wjA" secondAttribute="firstBaseline" id="mLO-I1-xCT"/>
-                            <constraint firstItem="fyj-CA-fkS" firstAttribute="top" secondItem="ANv-JC-efT" secondAttribute="bottom" constant="44" id="vKD-lR-kVR"/>
-                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="baseline" secondItem="kCX-e3-61j" secondAttribute="firstBaseline" id="ws4-Mp-sZg"/>
-                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="top" secondItem="sO6-2A-miD" secondAttribute="bottom" constant="31" id="zfB-08-DQX"/>
+                            <constraint firstItem="by8-ey-Bha" firstAttribute="top" secondItem="kCX-e3-61j" secondAttribute="bottom" constant="98" id="IGi-W0-1tE"/>
+                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="centerX" secondItem="sO6-2A-miD" secondAttribute="centerX" id="K3K-lg-rII"/>
+                            <constraint firstItem="fyj-CA-fkS" firstAttribute="leading" secondItem="CvN-rc-Ooi" secondAttribute="leadingMargin" constant="40" id="UcK-uD-c3y"/>
+                            <constraint firstItem="kCX-e3-61j" firstAttribute="baseline" secondItem="5Pf-9F-wjA" secondAttribute="firstBaseline" id="UfV-8B-dVO"/>
+                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="top" secondItem="sO6-2A-miD" secondAttribute="bottom" constant="31" id="W8D-r9-qLQ"/>
+                            <constraint firstItem="fyj-CA-fkS" firstAttribute="top" secondItem="ANv-JC-efT" secondAttribute="bottom" constant="44" id="Wdo-Li-QEl"/>
+                            <constraint firstItem="sO6-2A-miD" firstAttribute="leading" secondItem="CvN-rc-Ooi" secondAttribute="leadingMargin" id="Wsx-nx-QfS"/>
+                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="leading" secondItem="CvN-rc-Ooi" secondAttribute="leadingMargin" constant="41" id="X07-zF-pVs"/>
+                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="top" secondItem="fyj-CA-fkS" secondAttribute="bottom" constant="7" id="XCP-cW-RZh"/>
+                            <constraint firstItem="pRK-me-oUD" firstAttribute="centerX" secondItem="sO6-2A-miD" secondAttribute="centerX" id="YjK-PN-sTE"/>
+                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="centerY" secondItem="kCX-e3-61j" secondAttribute="centerY" id="a5q-Kh-Lfg"/>
+                            <constraint firstItem="kCX-e3-61j" firstAttribute="trailing" secondItem="5Pf-9F-wjA" secondAttribute="trailing" id="eck-YD-I8M"/>
+                            <constraint firstItem="sO6-2A-miD" firstAttribute="top" secondItem="pRK-me-oUD" secondAttribute="top" id="gbt-hP-yN0"/>
+                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="top" secondItem="kCX-e3-61j" secondAttribute="top" id="gq9-ML-YkB"/>
+                            <constraint firstItem="5Pf-9F-wjA" firstAttribute="baseline" secondItem="kCX-e3-61j" secondAttribute="firstBaseline" id="hXO-7c-TLw"/>
+                            <constraint firstItem="sO6-2A-miD" firstAttribute="trailing" secondItem="CvN-rc-Ooi" secondAttribute="trailingMargin" id="nXk-3M-H1y"/>
+                            <constraint firstItem="kCX-e3-61j" firstAttribute="leading" secondItem="5Pf-9F-wjA" secondAttribute="leading" id="oad-Uc-W1F"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IrF-xD-Jyr" secondAttribute="trailing" constant="39" id="qUy-xY-Xc7"/>
+                            <constraint firstItem="pRK-me-oUD" firstAttribute="top" secondItem="IrF-xD-Jyr" secondAttribute="bottom" constant="8" symbolic="YES" id="tdr-ZA-Sdo"/>
+                            <constraint firstItem="pRK-me-oUD" firstAttribute="centerX" secondItem="fyj-CA-fkS" secondAttribute="centerX" id="w5m-WA-7u4"/>
                         </constraints>
                     </view>
                     <connections>
