--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1663,14 +1663,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="About FlavorFinder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5a-AQ-dkt">
-                                <rect key="frame" x="228" y="162" width="145" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About FlavorFinder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5a-AQ-dkt">
+                                <rect key="frame" x="173" y="94" width="255" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="MGo-rT-t1n"/>
+                                    <constraint firstAttribute="width" constant="255" id="bXL-el-Bfm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSm-nz-MMn">
+                                <rect key="frame" x="143" y="132" width="315" height="191"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="315" id="ivg-UV-bou"/>
+                                </constraints>
+                                <string key="text">Icons used in accordance with free-to-use license from https://icons8.com/ unless otherwise noted: "Vegetarian" by Cody Foss from the Noun Project</string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wSm-nz-MMn" firstAttribute="top" secondItem="P5a-AQ-dkt" secondAttribute="bottom" constant="17" id="9Nh-m1-CRX"/>
+                            <constraint firstItem="XNS-9t-jiC" firstAttribute="top" secondItem="wSm-nz-MMn" secondAttribute="bottom" constant="228" id="I6y-8X-9Vh"/>
+                            <constraint firstItem="wSm-nz-MMn" firstAttribute="centerX" secondItem="Jnq-i6-eKP" secondAttribute="centerX" id="VFc-Ur-bif"/>
+                            <constraint firstItem="P5a-AQ-dkt" firstAttribute="top" secondItem="kwD-hQ-KfC" secondAttribute="bottom" constant="30" id="vdZ-uo-bpM"/>
+                            <constraint firstItem="P5a-AQ-dkt" firstAttribute="centerX" secondItem="wSm-nz-MMn" secondAttribute="centerX" id="zxd-S7-WSF"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZVv-in-1aq" userLabel="First Responder" sceneMemberID="firstResponder"/>
